--- a/spring_boot_api/logstash.conf
+++ b/spring_boot_api/logstash.conf
@@ -1,5 +1,32 @@
-input { stdin { } }
+#input { stdin { } }
+
+input {
+  file {
+    type => "java"
+    path => "/usr/share/logstash/pipeline/spring_boot_log.log"
+    codec => multiline {
+      pattern => "^%{YEAR}-%{MONTHNUM}-%{MONTHDAY} %{TIME}.*"
+      negate => "true"
+      what => "previous"
+    }
+  }
+}
+ 
+filter {
+  #If log line contains tab character followed by 'at' then we will tag that entry as stacktrace
+  if [message] =~ "\tat" {
+    grok {
+      match => ["message", "^(\tat)"]
+      add_tag => ["stacktrace"]
+    }
+  }
+ 
+}
+
+
 output {
   elasticsearch { hosts => ["localhost:9200"] }
   stdout { codec => rubydebug }
 }
+
+
