--- a/spring_boot_api/src/main/resources/application.properties
+++ b/spring_boot_api/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+logging.file=/usr/share/logstash/pipeline/spring_boot_log.log
