--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,11 +19,33 @@ services:
       - 9200:9200
     networks:
       - elastic
+  
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.15.0
+    container_name: kibana
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - 5601:5601
+    networks:
+      - elastic
+      
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.15.1
+    container_name: logstash
+    stdin_open: true
+    tty: true
+    volumes:
+      - /home/paul/Documents/daar/project2/git/cv_api_daar/spring_boot_api:/home/paul/Documents/daar/project2/git/cv_api_daar/spring_boot_api:ro
+    networks:
+      - elastic
+    command: logstash -f /home/paul/Documents/daar/project2/git/cv_api_daar/spring_boot_api
+
       
 volumes:
   data01:
     driver: local
-
+    
 networks:
   elastic:
     driver: bridge
