--- a/vuejs-frontend/Dockerfile
+++ b/vuejs-frontend/Dockerfile
@@ -1,13 +1,15 @@
-FROM node:lts-alpine
+FROM node:10
+
+EXPOSE 6058
 
 WORKDIR /usr/src/app/
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install && npm rebuild node-sass
 
-COPY . .
+COPY ./src ./src
 
-EXPOSE 6058
+COPY ./vue.config.js .
 
-
+COPY ./babel.config.js .
